WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132444
REGRESSION(168053): Repro crash navigating to another page after selecting phone numbers on a page
https://bugs.webkit.org/show_bug.cgi?id=132444
Summary
REGRESSION(168053): Repro crash navigating to another page after selecting ph...
Beth Dakin
Reported
2014-05-01 15:49:23 PDT
REGRESSION(168053): Repro crash navigating to another page after selecting phone numbers on a page. <
rdar://problem/16787285
>
Attachments
Patch
(1.54 KB, patch)
2014-05-01 15:51 PDT
,
Beth Dakin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-05-01 15:51:52 PDT
Created
attachment 230621
[details]
Patch
Beth Dakin
Comment 2
2014-05-01 15:54:44 PDT
Thank you!
http://trac.webkit.org/changeset/168124
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug