REGRESSION(168053): Repro crash navigating to another page after selecting phone numbers on a page https://bugs.webkit.org/show_bug.cgi?id=132444 -and corresponding- <rdar://problem/16787285>

Reviewed by Darin Adler.

Missing null-check.
* WebProcess/WebPage/mac/TelephoneNumberOverlayControllerMac.mm:
(WebKit::TelephoneNumberOverlayController::drawRect):



Canonical link: https://commits.webkit.org/150478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168124 268f45cc-cd09-0410-ab3c-d52691b4dbfc